--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 .header {
     font-family: 'Faster One', cursive;
     font-size: 40px;
-    margin-top: 0;
+    margin-top: -5px;
 }
 
 .instructions {
