--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 .instructions {
     font-family: 'The Girl Next Door', cursive;
     font-size: 20px;
-    margin-top: 0;
+    margin-top: -5px;
 }
 
 .chars {
