--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,6 @@ body {
 }
 
 .indicators {
-    position: absolute;
-    float: left;
+    position: absolute !important;
+    float: left !important;
 }
