--- a/css/style.css
+++ b/css/style.css
@@ -55,4 +55,6 @@ body {
 .indicators {
     position: absolute !important;
     float: left !important;
+    layout: block !important;
+    margin: 0 auto !imporant;
 }
